fix svg on mobile

--- a/_css/global.css
+++ b/_css/global.css
@@ -217,8 +217,30 @@ img {
 }
 
 @media (max-width: 800px) {
+.im-800 {
+	position: relative;
+}
 .im-800 img {
     width: 100vw; /* 100% view width */
+}
+.im-800 svg {
+	width: 100vw;
+	pointer-events: none;
+	filter: blur(5px);
+}
+.im-800-svg::after {
+	content: "Not supported for screens smaller than 800px";
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background: rgba(0, 0, 0, 0.3); /* Semi-transparent background */
+	color: white;
+	padding: 1rem;
+	border-radius: 0.5rem;
+	font-size: 1.2rem;
+	text-align: center;
+	z-index: 1; /* Ensure it appears above the SVG */
 }
 }
 
